# light-engine

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
assets/lights/: muzzle_lights.json
firmware/cpx_light/: README.md
firmware/cpx_light/src/: main.cpp
layouts/: cpx_ring.json  cpx_ring_layout.json
lib/cpx_adapter/include/cpx/: CpxOutput.h  SerialProtocol.h
lib/cpx_adapter/src/: CpxOutput.cpp  SerialProtocol.cpp
lib/light_core/: CMakeLists.txt
lib/light_core/include/light/: Canvas2D.h  Color.h  Effects.h  ILightField2D.h  Layout.h  LayoutData.h  LightEngine.h  Rasterizer.h
lib/light_core/include/light/effects/: PulseBlobEffect.h  StripeScrollEffect.h
lib/light_core/src/: Canvas2D.cpp  Color.cpp  Effects.cpp  Layout.cpp  LayoutData.cpp  LightEngine.cpp  Rasterizer.cpp
lib/light_core/src/effects/: PulseBlobEffect.cpp  StripeScrollEffect.cpp
lib/light_profile/include/light/: LightAnimator.h  LightController.h  LightProfile.h  LightProfileLoader.h  MiniJson.h
lib/light_profile/src/: LightAnimator.cpp  LightController.cpp  LightProfile.cpp  LightProfileLoader.cpp  MiniJson.cpp
src/: main.cpp
tests/: smoke_test.txt
tools/: generate_ring_layout.py  show_led_layout_from_json.py
tools/console_demo/: main.cpp
tools/desktop_sim/src/: example_light_profile_usage.cpp  main.cpp
tools/light_sim/: CMakeLists.txt
tools/light_sim/src/: main.cpp
tools/pc_light_sim/: sim.py
